[gd_scene load_steps=19 format=2]

[ext_resource path="res://Player/Player2.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main/Main.gd" type="Script" id=2]
[ext_resource path="res://Player/Player1.tscn" type="PackedScene" id=3]
[ext_resource path="res://Other/Camera2D.tscn" type="PackedScene" id=4]
[ext_resource path="res://Main/Camera2D.gd" type="Script" id=6]
[ext_resource path="res://Other/GameCanvas.tscn" type="PackedScene" id=7]
[ext_resource path="res://Shader/black-vignette-png-2.png" type="Texture" id=8]
[ext_resource path="res://Dungeon/Dungeon.tscn" type="PackedScene" id=11]
[ext_resource path="res://Chest/Chest.tscn" type="PackedScene" id=16]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 384, 352 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 288, 224 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 296, 264 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 392, 352 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 264, 224 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 192, 232 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 584, 416 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 200, 480 )

[sub_resource type="Animation" id=1]
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Control/GameOverScreen:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Main" type="Node"]
script = ExtResource( 2 )

[node name="World" type="Node2D" parent="."]

[node name="Dungeon" parent="World" instance=ExtResource( 11 )]
position = Vector2( -577.721, -446.161 )

[node name="FireballHolder" type="Node" parent="World"]

[node name="EnemyHolder" type="Node" parent="World"]

[node name="PlayerHolder" type="Node" parent="World"]

[node name="Player1" parent="World/PlayerHolder" instance=ExtResource( 3 )]
position = Vector2( 0, 50 )

[node name="Camera2D" parent="World/PlayerHolder/Player1" instance=ExtResource( 4 )]

[node name="Player2" parent="World/PlayerHolder" instance=ExtResource( 1 )]
position = Vector2( 0, -50 )

[node name="Camera2D" type="Camera2D" parent="World/PlayerHolder/Player2"]
script = ExtResource( 6 )

[node name="Vignette" type="Node2D" parent="World/PlayerHolder/Player2/Camera2D"]
scale = Vector2( 0.72, 0.61 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="World/PlayerHolder/Player2/Camera2D/Vignette"]
modulate = Color( 1, 1, 1, 0.784314 )
texture = ExtResource( 8 )

[node name="PowerupHolder" type="Node" parent="World"]

[node name="Objects" type="Node" parent="World"]

[node name="Chest" parent="World/Objects" instance=ExtResource( 16 )]
position = Vector2( -2312, 224 )

[node name="Chest2" parent="World/Objects" instance=ExtResource( 16 )]
position = Vector2( 568, -2848 )

[node name="Chest3" parent="World/Objects" instance=ExtResource( 16 )]
position = Vector2( 2424, -1928 )

[node name="Chest4" parent="World/Objects" instance=ExtResource( 16 )]
position = Vector2( 1024, -240 )

[node name="Chest2" parent="World/Objects" instance=ExtResource( 16 )]
position = Vector2( -56, -248 )

[node name="Spawn" type="Node" parent="World"]

[node name="SpawnRegion" type="Area2D" parent="World/Spawn"]
position = Vector2( -200, 0 )

[node name="SpawnRect" type="CollisionShape2D" parent="World/Spawn/SpawnRegion"]
position = Vector2( 0, 32 )
shape = SubResource( 2 )

[node name="Position2D" type="Position2D" parent="World/Spawn/SpawnRegion"]
position = Vector2( -304, -248 )

[node name="SpawnRegion2" type="Area2D" parent="World/Spawn"]
position = Vector2( -904, 0 )

[node name="SpawnRect" type="CollisionShape2D" parent="World/Spawn/SpawnRegion2"]
position = Vector2( -24, 32 )
shape = SubResource( 3 )

[node name="SpawnRegion3" type="Area2D" parent="World/Spawn"]
position = Vector2( -1608, 344 )

[node name="SpawnRect" type="CollisionShape2D" parent="World/Spawn/SpawnRegion3"]
position = Vector2( -24, 32 )
shape = SubResource( 4 )

[node name="SpawnRegion4" type="Area2D" parent="World/Spawn"]
position = Vector2( -1608, -352 )

[node name="SpawnRect" type="CollisionShape2D" parent="World/Spawn/SpawnRegion4"]
position = Vector2( -24, 32 )
shape = SubResource( 4 )

[node name="SpawnRegion5" type="Area2D" parent="World/Spawn"]
position = Vector2( -168, -832 )

[node name="SpawnRect" type="CollisionShape2D" parent="World/Spawn/SpawnRegion5"]
position = Vector2( -24, 32 )
shape = SubResource( 5 )

[node name="SpawnRegion6" type="Area2D" parent="World/Spawn"]
position = Vector2( 656, -1408 )

[node name="SpawnRect" type="CollisionShape2D" parent="World/Spawn/SpawnRegion6"]
position = Vector2( -24, 32 )
shape = SubResource( 6 )

[node name="SpawnRegion7" type="Area2D" parent="World/Spawn"]
position = Vector2( 656, -2112 )

[node name="SpawnRect" type="CollisionShape2D" parent="World/Spawn/SpawnRegion7"]
position = Vector2( -24, 32 )
shape = SubResource( 6 )

[node name="SpawnRegion8" type="Area2D" parent="World/Spawn"]
position = Vector2( 1048, -320 )

[node name="SpawnRect" type="CollisionShape2D" parent="World/Spawn/SpawnRegion8"]
position = Vector2( -24, 32 )
shape = SubResource( 7 )

[node name="SpawnRegion9" type="Area2D" parent="World/Spawn"]
position = Vector2( 1240, -1792 )

[node name="SpawnRect" type="CollisionShape2D" parent="World/Spawn/SpawnRegion9"]
position = Vector2( -24, 32 )
shape = SubResource( 8 )

[node name="SpawnRegion10" type="Area2D" parent="World/Spawn"]
position = Vector2( 656, 1024 )

[node name="SpawnRect" type="CollisionShape2D" parent="World/Spawn/SpawnRegion10"]
position = Vector2( -24, 32 )
shape = SubResource( 8 )

[node name="SpawnRegion11" type="Area2D" parent="World/Spawn"]
position = Vector2( 664, 2168 )

[node name="SpawnRect" type="CollisionShape2D" parent="World/Spawn/SpawnRegion11"]
position = Vector2( -24, 32 )
shape = SubResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/GameOver = SubResource( 1 )

[node name="CanvasLayer" parent="." instance=ExtResource( 7 )]

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 8.0
autostart = true

[node name="ScoreTimer" type="Timer" parent="."]
autostart = true
